DEMO-GoT-Scaling/5-deploy-application/group2/gotmining-frontend/gotminingui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gotmining
  labels:
    app: gotminingui
    app.kubernetes.io/part-of: gotmining
spec:
  host: *
  to:
    kind: Service
    name: gotminingui
    weight: 100
  port:
    targetPort: '3000'
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
